- adding custom fluidsynth midi player. This version adds an track number property to tracks, and a track pointer property for midi events so we can ultimately figure out what track number an event belongs to. We need to do this so we can circumvent the 16 channel midi file limitation during playback.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -159,8 +159,7 @@ set(SOURCE_FILES
     ui/qt/MusicPlayer.cpp
 
     lib/fluidsynth/mem_sfloader/mem_sfloader.c
-    #lib/fluidsynth/mem_sfloader/mem_sfloader2.c
-    #lib/fluidsynth/mem_sfloader/fluid_list.c
+    lib/fluidsynth/mem_sfloader/vgmtrans_fluid_midi.c
 
     ui/qt/mainwindow.h
     ui/qt/droparea.h
@@ -307,6 +306,7 @@ set(SOURCE_FILES
     lib/fluidsynth/include/fluidsynth/voice.h
     lib/fluidsynth/include/fluidsynth.h
     lib/fluidsynth/mem_sfloader/mem_sfloader.h
+    lib/fluidsynth/mem_sfloader/vgmtrans_fluid_midi.h
     lib/minizip/crypt.h
     lib/minizip/ioapi.h
     lib/minizip/mztools.h
