--- a/src/VGMTrans.vcxproj.filters
+++ b/src/VGMTrans.vcxproj.filters
@@ -232,11 +232,11 @@
     <Filter Include="Source Files\formats\neverlandsnes">
       <UniqueIdentifier>{d5d93f14-1b60-404d-8cbe-9ad1dbdd0fe6}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Header Files\formats\imaxsnes">
-      <UniqueIdentifier>{a9d44b18-73f2-40b1-98db-61a26dccb3fa}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source Files\formats\imaxsnes">
+    <Filter Include="Source Files\formats\prismsnes">
       <UniqueIdentifier>{d573af0f-2138-4232-9a7d-6f9f129b2009}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\formats\prismsnes">
+      <UniqueIdentifier>{a9d44b18-73f2-40b1-98db-61a26dccb3fa}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -753,11 +753,11 @@
     <ClCompile Include="main\formats\NeverlandSnesSeq.cpp">
       <Filter>Source Files\formats\neverlandsnes</Filter>
     </ClCompile>
-    <ClCompile Include="main\formats\IMaxSnesScanner.cpp">
-      <Filter>Source Files\formats\imaxsnes</Filter>
+    <ClCompile Include="main\formats\PrismSnesScanner.cpp">
+      <Filter>Source Files\formats\prismsnes</Filter>
     </ClCompile>
-    <ClCompile Include="main\formats\IMaxSnesSeq.cpp">
-      <Filter>Source Files\formats\imaxsnes</Filter>
+    <ClCompile Include="main\formats\PrismSnesSeq.cpp">
+      <Filter>Source Files\formats\prismsnes</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1367,14 +1367,14 @@
     <ClInclude Include="main\formats\NeverlandSnesSeq.h">
       <Filter>Header Files\formats\neverlandsnes</Filter>
     </ClInclude>
-    <ClInclude Include="main\formats\IMaxSnesFormat.h">
-      <Filter>Header Files\formats\imaxsnes</Filter>
+    <ClInclude Include="main\formats\PrismSnesFormat.h">
+      <Filter>Header Files\formats\prismsnes</Filter>
     </ClInclude>
-    <ClInclude Include="main\formats\IMaxSnesScanner.h">
-      <Filter>Header Files\formats\imaxsnes</Filter>
+    <ClInclude Include="main\formats\PrismSnesScanner.h">
+      <Filter>Header Files\formats\prismsnes</Filter>
     </ClInclude>
-    <ClInclude Include="main\formats\IMaxSnesSeq.h">
-      <Filter>Header Files\formats\imaxsnes</Filter>
+    <ClInclude Include="main\formats\PrismSnesSeq.h">
+      <Filter>Header Files\formats\prismsnes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
