--- a/src/VGMTrans.vcxproj
+++ b/src/VGMTrans.vcxproj
@@ -83,7 +83,7 @@
     <CodeAnalysisRules Condition="'$(Configuration)|$(Platform)'=='Release|x64'" />
     <CodeAnalysisRuleAssemblies Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" />
     <CodeAnalysisRuleAssemblies Condition="'$(Configuration)|$(Platform)'=='Release|x64'" />
-    <IncludePath Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(ProjectDir)lib\dxAug07\include;$(ProjectDir)lib\wtl;$(ProjectDir)lib\tinyxml;$(ProjectDir)lib\zlib\include;$(ProjectDir)lib\yaml-cpp\include;$(IncludePath)</IncludePath>
+    <IncludePath Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(ProjectDir)lib\dxAug07\include;$(ProjectDir)lib\wtl;$(ProjectDir)lib\tinyxml;$(ProjectDir)lib\zlib\include;$(ProjectDir)lib\yaml-cpp\include;$(ProjectDir)ui\windows;$(IncludePath)</IncludePath>
     <IncludePath Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)lib\dxAug07\include;$(ProjectDir)lib\wtl;$(ProjectDir)lib\tinyxml;$(ProjectDir)lib\zlib\include;$(ProjectDir)lib\yaml-cpp\include;$(IncludePath)</IncludePath>
     <LibraryPath Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">$(ProjectDir)lib\dxAug07\lib\x86;$(ProjectDir)lib\tinyxml\lib\win32;$(ProjectDir)lib\zlib\lib\win32;$(ProjectDir)lib\yaml-cpp\lib\win32;$(LibraryPath)</LibraryPath>
     <LibraryPath Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">$(ProjectDir)lib\dxAug07\lib\x64;$(ProjectDir)lib\tinyxml\lib\x64;$(ProjectDir)lib\zlib\lib\x64;$(ProjectDir)lib\yaml-cpp\lib\x64;$(LibraryPath)</LibraryPath>
@@ -109,6 +109,8 @@
       <PrecompiledHeader>Use</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <DisableSpecificWarnings>4819</DisableSpecificWarnings>
+      <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
+      <PrecompiledHeaderOutputFile>$(IntDir)$(TargetName).pch</PrecompiledHeaderOutputFile>
     </ClCompile>
     <ResourceCompile />
     <Link>
@@ -288,11 +290,8 @@
     <ClCompile Include="ui\windows\RawFileListView.cpp" />
     <ClCompile Include="ui\windows\RawFileTreeView.cpp" />
     <ClCompile Include="ui\windows\ScanDlg.cpp" />
-    <ClCompile Include="main\stdafx.cpp">
+    <ClCompile Include="ui\windows\stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="ui\windows\VGMCollListView.cpp" />
     <ClCompile Include="ui\windows\VGMFileListView.cpp" />
@@ -450,6 +449,7 @@
     <ClInclude Include="main\Options.h" />
     <ClInclude Include="main\loaders\KabukiDecrypt.h" />
     <ClInclude Include="main\formats\OrgFormat.h" />
+    <ClInclude Include="main\pch.h" />
     <ClInclude Include="main\PSFFile.h" />
     <ClInclude Include="main\formats\RareSnesFormat.h" />
     <ClInclude Include="main\formats\RareSnesScanner.h" />
@@ -464,6 +464,7 @@
     <ClInclude Include="main\VGMMultiSectionSeq.h" />
     <ClInclude Include="main\VGMSeqSection.h" />
     <ClInclude Include="main\VGMTag.h" />
+    <ClInclude Include="portable.h" />
     <ClInclude Include="ui\windows\aboutdlg.h" />
     <ClInclude Include="ui\windows\BmpBtn.h" />
     <ClInclude Include="ui\windows\CollDialog.h" />
@@ -483,8 +484,8 @@
     <ClInclude Include="ui\windows\RawFileTreeView.h" />
     <ClInclude Include="ui\windows\resource.h" />
     <ClInclude Include="ui\windows\ScanDlg.h" />
-    <ClInclude Include="main\stdafx.h" />
     <ClInclude Include="ui\windows\include\TabbedMDISave.h" />
+    <ClInclude Include="ui\windows\stdafx.h" />
     <ClInclude Include="ui\windows\VGMCollListView.h" />
     <ClInclude Include="ui\windows\VGMFileListView.h" />
     <ClInclude Include="ui\windows\VGMTransTabCtrl.h" />
