Add NamcoSnesInstr and its scanner

--- a/src/VGMTrans.vcxproj
+++ b/src/VGMTrans.vcxproj
@@ -238,6 +238,7 @@
     <ClCompile Include="main\formats\HudsonSnesInstr.cpp" />
     <ClCompile Include="main\formats\HudsonSnesScanner.cpp" />
     <ClCompile Include="main\formats\HudsonSnesSeq.cpp" />
+    <ClCompile Include="main\formats\NamcoSnesInstr.cpp" />
     <ClCompile Include="main\formats\PrismSnesScanner.cpp" />
     <ClCompile Include="main\formats\PrismSnesSeq.cpp" />
     <ClCompile Include="main\formats\KonamiSnesInstr.cpp" />
@@ -425,6 +426,7 @@
     <ClInclude Include="main\formats\HudsonSnesInstr.h" />
     <ClInclude Include="main\formats\HudsonSnesScanner.h" />
     <ClInclude Include="main\formats\HudsonSnesSeq.h" />
+    <ClInclude Include="main\formats\NamcoSnesInstr.h" />
     <ClInclude Include="main\formats\PrismSnesFormat.h" />
     <ClInclude Include="main\formats\PrismSnesScanner.h" />
     <ClInclude Include="main\formats\PrismSnesSeq.h" />
