--- a/src/VGMTrans.vcxproj.filters
+++ b/src/VGMTrans.vcxproj.filters
@@ -759,6 +759,9 @@
     <ClCompile Include="main\formats\PrismSnesSeq.cpp">
       <Filter>Source Files\formats\prismsnes</Filter>
     </ClCompile>
+    <ClCompile Include="main\formats\NamcoSnesInstr.cpp">
+      <Filter>Source Files\formats\namcosnes</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ui\windows\aboutdlg.h">
@@ -1375,6 +1378,9 @@
     </ClInclude>
     <ClInclude Include="main\formats\PrismSnesSeq.h">
       <Filter>Header Files\formats\prismsnes</Filter>
+    </ClInclude>
+    <ClInclude Include="main\formats\NamcoSnesInstr.h">
+      <Filter>Header Files\formats\namcosnes</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
