--- a/src/VGMTrans.vcxproj
+++ b/src/VGMTrans.vcxproj
@@ -239,6 +239,7 @@
     <ClCompile Include="main\formats\HudsonSnesScanner.cpp" />
     <ClCompile Include="main\formats\HudsonSnesSeq.cpp" />
     <ClCompile Include="main\formats\NamcoSnesInstr.cpp" />
+    <ClCompile Include="main\formats\PrismSnesInstr.cpp" />
     <ClCompile Include="main\formats\PrismSnesScanner.cpp" />
     <ClCompile Include="main\formats\PrismSnesSeq.cpp" />
     <ClCompile Include="main\formats\KonamiSnesInstr.cpp" />
@@ -428,6 +429,7 @@
     <ClInclude Include="main\formats\HudsonSnesSeq.h" />
     <ClInclude Include="main\formats\NamcoSnesInstr.h" />
     <ClInclude Include="main\formats\PrismSnesFormat.h" />
+    <ClInclude Include="main\formats\PrismSnesInstr.h" />
     <ClInclude Include="main\formats\PrismSnesScanner.h" />
     <ClInclude Include="main\formats\PrismSnesSeq.h" />
     <ClInclude Include="main\formats\KonamiSnesFormat.h" />
