--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ branches:
     - qt
 
 before_install:
+  - sudo add-apt-repository -y ppa:ubuntu-sdk-team/ppa
   - sudo apt-get update -qq
   - sudo apt-get install -qq cmake qtdeclarative5-dev libglib2.0-dev libfluidsynth-dev
 
