--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -23,7 +23,8 @@ set(CMAKE_CXX_FLAGS "${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
 #set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 set ( CMAKE_OSX_ARCHITECTURES "x86_64;" )
 #set ( CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libstdc++ -g3 -Wall -O0" )
-set ( CMAKE_CXX_FLAGS "-std=c++11 -w -g3 -Wall -O0" )
+#set ( CMAKE_CXX_FLAGS "-std=c++11 -w -g3 -Wall -O0" )
+set ( CMAKE_CXX_FLAGS "-w -g3 -Wall -O0" )
 #-Wl,-subsystem,windows
 #set ( CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++ -g3 -Wall -O0" )
 #find_package(Qt5 COMPONENTS Widgets Declarative)
