--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ branches:
 before_install:
   - sudo add-apt-repository -y ppa:ubuntu-sdk-team/ppa
   - sudo apt-get update -qq
-  - sudo apt-get install -qq cmake qtdeclarative5-dev libglib2.0-dev libfluidsynth-dev
+  - sudo apt-get install -qq qt5-default qtdeclarative5-dev
+  - sudo apt-get install -qq cmake libglib2.0-dev libfluidsynth-dev
 
 before_script:
   - cd src/
