--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ branches:
 before_install:
   - sudo add-apt-repository -y ppa:ubuntu-sdk-team/ppa
   - sudo apt-get update -qq
-  - sudo apt-get install -qq qt5-default qtdeclarative5-dev
+  - sudo apt-get install -qq qtdeclarative5-dev qt5-default qtmultimedia5-dev qttools5-dev-tools qtbase5-dev libqt5core5 qtbase5-dev-tools
   - sudo apt-get install -qq cmake libglib2.0-dev libfluidsynth-dev
 
 before_script:
