--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ branches:
 before_install:
   - sudo add-apt-repository -y ppa:ubuntu-sdk-team/ppa
   - sudo apt-get update -qq
+  - sudo apt-get install -qq gcc-4.9 g++-4.9
   - sudo apt-get install -qq qtdeclarative5-dev
   - sudo apt-get install -qq cmake libglib2.0-dev libfluidsynth-dev
 
