--- a/.travis.yml
+++ b/.travis.yml
@@ -11,11 +11,15 @@ branches:
     - qt
 
 before_install:
+  - echo g++ --version
   - sudo add-apt-repository -y ppa:ubuntu-sdk-team/ppa
   - sudo apt-get update -qq
-  - sudo apt-get install -qq gcc-4.9 g++-4.9
+  - sudo apt-get install -qq gcc-4.8 g++-4.8
   - sudo apt-get install -qq qtdeclarative5-dev
   - sudo apt-get install -qq cmake libglib2.0-dev libfluidsynth-dev
+# We want to compile with g++ 4.8 when rather than the default g++
+  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
+  - echo g++ --version
 
 before_script:
   - cd src/
