--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ branches:
     - qt
 
 before_install:
-  - echo g++ --version
+  - g++ --version
+  - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo add-apt-repository -y ppa:ubuntu-sdk-team/ppa
   - sudo apt-get update -qq
   - sudo apt-get install -qq gcc-4.8 g++-4.8
@@ -19,7 +20,7 @@ before_install:
   - sudo apt-get install -qq cmake libglib2.0-dev libfluidsynth-dev
 # We want to compile with g++ 4.8 when rather than the default g++
   - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.8 90
-  - echo g++ --version
+  - g++ --version
 
 before_script:
   - cd src/
