--- a/.travis.yml
+++ b/.travis.yml
@@ -4,20 +4,20 @@ language: cpp
 
 compiler:
   - gcc
-
-#branches:
-#  only:
-#    - qt
+  - clang
 
 before_install:
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+  - sudo add-apt-repository -y ppa:beineri/opt-qt541
   - sudo add-apt-repository -y ppa:ubuntu-sdk-team/ppa
   - sudo apt-get update -qq
-  - sudo apt-get install -qq gcc-4.9 g++-4.9
-  - sudo apt-get install -qq qtdeclarative5-dev
-  - sudo apt-get install -qq cmake libglib2.0-dev libfluidsynth-dev
-# We want to compile with g++ 4.9 when rather than the default g++
-  - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 90
+
+install:
+  - if [ "$CXX" == "g++" ]; then sudo apt-get install gcc-4.9 g++-4.9; fi
+  - if [ "$CXX" == "g++" ]; then sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-4.9 90; fi
+  - sudo apt-get install qt54base
+  - source /opt/qt54/bin/qt54-env.sh
+  - sudo apt-get install cmake libglib2.0-dev libfluidsynth-dev
 
 before_script:
   - cd src/
