--- a/src/VGMTrans_WTL.vcxproj.filters
+++ b/src/VGMTrans_WTL.vcxproj.filters
@@ -606,9 +606,6 @@
     <ClCompile Include="main\formats\HeartBeatPS1Seq.cpp">
       <Filter>Source Files\formats\heartbeatps1</Filter>
     </ClCompile>
-    <ClCompile Include="main\formats\HeartBeatPS1SeqScanner.cpp">
-      <Filter>Source Files\formats\heartbeatps1</Filter>
-    </ClCompile>
     <ClCompile Include="main\VGMTag.cpp">
       <Filter>Source Files\main</Filter>
     </ClCompile>
@@ -764,6 +761,9 @@
     </ClCompile>
     <ClCompile Include="ui\windows\stdafx.cpp">
       <Filter>Source Files\windows</Filter>
+    </ClCompile>
+    <ClCompile Include="main\formats\HeartBeatPS1Scanner.cpp">
+      <Filter>Source Files\formats\heartbeatps1</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -1181,9 +1181,6 @@
     <ClInclude Include="main\formats\HeartBeatPS1Seq.h">
       <Filter>Header Files\formats\heartbeatps1</Filter>
     </ClInclude>
-    <ClInclude Include="main\formats\HeartBeatPS1SeqScanner.h">
-      <Filter>Header Files\formats\heartbeatps1</Filter>
-    </ClInclude>
     <ClInclude Include="main\VGMTag.h">
       <Filter>Header Files\main</Filter>
     </ClInclude>
@@ -1393,6 +1390,9 @@
     </ClInclude>
     <ClInclude Include="portable.h">
       <Filter>Header Files\main</Filter>
+    </ClInclude>
+    <ClInclude Include="main\formats\HeartBeatPS1Scanner.h">
+      <Filter>Header Files\formats\heartbeatps1</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
