-fixing gcc/clang compile issues with TamSoft. -fixing fluidsynth threading support in windows. using statically linked glib functions in libfluidsynth -adding countof() function to pch.h instead of stdafx.h. also switched to an improved version -fixing cmake/Qt build on Windows. Making the cmake target a win32 app instead of console app required WinMain() be defined. increasing the minimum required version of cmake automatically sets a new policy that defines WinMain for us

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 2.8.4)
+cmake_minimum_required(VERSION 3.0.0)
 project(VGMTrans)
 
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")
@@ -9,7 +9,7 @@ set(CMAKE_AUTOMOC ON)
 # to always look for includes there:
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 # Widgets finds its own dependencies (QtGui and QtCore).
-find_package(Qt5Widgets REQUIRED)
+find_package(Qt5Core REQUIRED)
 # The Qt5Widgets_INCLUDES also includes the include directories for
 # dependencies QtCore and QtGui
 include_directories(${Qt5Widgets_INCLUDE_DIRS})
