--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ before_install:
   - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
   - sudo add-apt-repository -y ppa:beineri/opt-qt541
   - sudo add-apt-repository -y ppa:ubuntu-sdk-team/ppa
+  - sudo add-apt-repository -y ppa:kalakris/cmake
   - sudo apt-get update -qq
 
 install:
