--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,27 +1,35 @@
 cmake_minimum_required(VERSION 2.8.11)
 project(VGMTrans)
 
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake")
+IF(APPLE)
+    set ( CMAKE_LIBRARY_ARCHITECTURE "x86_64-apple-darwin10" )
+    set ( CMAKE_OSX_ARCHITECTURES "x86_64;" )
+ENDIF(APPLE)
 
-# Tell CMake to run moc when necessary:
-set(CMAKE_AUTOMOC ON)
-# As moc files are generated in the binary dir, tell CMake
-# to always look for includes there:
+#set(CMAKE_INSTALL_PREFIX ${CMAKE_BINARY_DIR})
+
+set(CMAKE_PREFIX_PATH
+    ${CMAKE_PREFIX_PATH}
+    "${CMAKE_SOURCE_DIR}/contrib/${CMAKE_LIBRARY_ARCHITECTURE}")
+
+set(CMAKE_MODULE_PATH
+    ${CMAKE_MODULE_PATH}
+    ${CMAKE_SOURCE_DIR}/cmake)
+
+
+# Find includes in corresponding build directories
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
-# Widgets finds its own dependencies (QtGui and QtCore).
-find_package(Qt5Core REQUIRED)
-# The Qt5Widgets_INCLUDES also includes the include directories for
-# dependencies QtCore and QtGui
-include_directories(${Qt5Widgets_INCLUDE_DIRS})
-# We need add -DQT_WIDGETS_LIB when using QtWidgets in Qt 5.
+# Instruct CMake to run moc automatically when needed.
+set(CMAKE_AUTOMOC ON)
+## We need add -DQT_WIDGETS_LIB when using QtWidgets in Qt 5.
 add_definitions(${Qt5Widgets_DEFINITIONS})
-# Executables fail to build with Qt 5 in the default configuration
-# without -fPIE. We add that here.
+## Executables fail to build with Qt 5 in the default configuration
+## without -fPIE. We add that here.
 set(CMAKE_CXX_FLAGS "${Qt5Widgets_EXECUTABLE_COMPILE_FLAGS}")
 
+# Find the QtWidgets library
+find_package(Qt5Widgets REQUIRED)
 
-#set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-set ( CMAKE_OSX_ARCHITECTURES "x86_64;" )
 
 if(MSVC)
   set(CMAKE_CXX_FLAGS "/EHsc")
@@ -31,8 +39,6 @@ else()
   #-Wl,-subsystem,windows
   #set ( CMAKE_CXX_FLAGS "-std=c++11 -stdlib=libc++ -g3 -Wall -O0" )
 endif()
-
-#find_package(Qt5 COMPONENTS Widgets Declarative)
 
 
 include_directories(
@@ -445,16 +451,10 @@ IF (APPLE)
 SET(GUI_TYPE MACOSX_BUNDLE)
 ENDIF (APPLE)
 
-#ADD_EXECUTABLE( MyApplication ${GUI_TYPE} ${PROJECT_SRCS} )
-
 add_executable(vgmtrans ${GUI_TYPE} ${SOURCE_FILES} ${UI_RESOURCES})
 
-
-# The Qt5Widgets_LIBRARIES variable also includes QtGui and QtCore
-target_link_libraries(vgmtrans ${Qt5Widgets_LIBRARIES})
-
-QT5_USE_MODULES(vgmtrans Widgets Core)
-
+# Use the Widgets module from Qt 5.
+target_link_libraries(vgmtrans Qt5::Widgets)
 
 if (MSVC)
     #set(ZLIB_INCLUDE_DIR "lib/zlib/include")
@@ -498,6 +498,12 @@ else (MSVC)
       target_link_libraries (vgmtrans ${ZLIB_LIBRARIES})
     endif (ZLIB_FOUND)
 
+    FIND_LIBRARY(INTL_LIBRARY NAMES intl)
+    target_link_libraries(vgmtrans ${INTL_LIBRARY})
+
+    FIND_LIBRARY(ICONV_LIBRARIES NAMES iconv)
+    target_link_libraries(vgmtrans ${ICONV_LIBRARIES})
+
     find_package(GLIB REQUIRED)
     target_link_libraries(vgmtrans ${GLIB_LIBRARIES})
 
@@ -508,18 +514,44 @@ else (MSVC)
 endif (MSVC)
 
 IF (APPLE)
+   FIND_LIBRARY(IOKIT_LIBRARY IOKit)
+   FIND_LIBRARY(HARFBUZZ_LIBRARY harfbuzz)
+   FIND_LIBRARY(APPKIT_LIBRARY AppKit)
+   FIND_LIBRARY(CARBON_LIBRARY Carbon)
    FIND_LIBRARY(COREMIDI_LIBRARY CoreMIDI)
    FIND_LIBRARY(COREAUDIO_LIBRARY CoreAudio)
    FIND_LIBRARY(AUDIOUNIT_LIBRARY AudioUnit)
    FIND_LIBRARY(COREFOUNDATION_LIBRARY CoreFoundation)
    FIND_LIBRARY(CORESERVICES_LIBRARY CoreServices)
+
+   FIND_LIBRARY(QCOCOA_LIBRARY qcocoa)
+   FIND_LIBRARY(QT5PLATFORMSUPPORT_LIBRARY Qt5PlatformSupport)
+   FIND_LIBRARY(QT5PRINTSUPPORT_LIBRARY Qt5PrintSupport)
+   FIND_LIBRARY(CUPS_LIBRARY cups)
+
+   FIND_LIBRARY(READLINE_LIBRARY readline)
+   FIND_LIBRARY(NCURSES_LIBRARY ncurses)
+
    TARGET_LINK_LIBRARIES(vgmtrans
+    ${QCOCOA_LIBRARY}
+    ${HARFBUZZ_LIBRARY}
+    ${APPKIT_LIBRARY}
+    ${CARBON_LIBRARY}
     ${COREMIDI_LIBRARY}
     ${COREAUDIO_LIBRARY}
     ${AUDIOUNIT_LIBRARY}
     ${COREFOUNDATION_LIBRARY}
     ${CORESERVICES_LIBRARY}
+
+    ${QT5PLATFORMSUPPORT_LIBRARY}
+    ${QT5PRINTSUPPORT_LIBRARY}
+    ${CUPS_LIBRARY}
+    ${IOKIT_LIBRARY}
+
+    ${READLINE_LIBRARY}
+    ${NCURSES_LIBRARY}
     )
+
 ENDIF (APPLE)
 
 add_definitions(-DTIXML_USE_STL)
